fix: Call `color-contrast` only if `type-of() == "color"`

--- a/inst/builtin/bs5/shiny/_variables.scss
+++ b/inst/builtin/bs5/shiny/_variables.scss
@@ -143,7 +143,7 @@ $bslib-sidebar-fg: null !default;
 @if $bslib-sidebar-bg == null {
   // if sidebar-bg not set by user, default to body background
   $bslib-sidebar-bg: RGBA(var(--#{$prefix}body-bg-rgb), 0.05);
-} @else if $bslib-sidebar-fg == null {
+} @else if $bslib-sidebar-fg == null and type-of($bslib-sidebar-bg) == "color" {
   // if sidebar-bg but not -fg set by the user, find a contrasting color
   $bslib-sidebar-fg: color-contrast($bslib-sidebar-bg);
 }
